--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,11 +67,13 @@ buildtest:search-with-index-cache:
       if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
         export DOCKER_HOST='tcp://localhost:2375'
       fi
+    - "cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/ || :"
     - docker info
     - apk update
     - apk upgrade
-    - apk add python python-dev py-pip build-base
-    - pip install docker-compose
+    - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
+    - pip3 install --upgrade pip
+    - pip3 install docker-compose
     - docker-compose --version
   cache:
     key: $CI_JOB_NAME
@@ -80,9 +82,11 @@ buildtest:search-with-index-cache:
       - "target"
       - "*/target"
       - "*/project/target"
+      - "$CI_PROJECT_DIR/pip-cache"
   services:
     - docker:dind
   variables:
+    PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
     # 2.5gb heap
     # unload classes we don't need
     # aim for < 1000ms gc pauses (largely ignored)
@@ -126,8 +130,9 @@ buildtest:search-no-index-cache:
     - docker info
     - apk update
     - apk upgrade
-    - apk add python python-dev py-pip build-base
-    - pip install docker-compose
+    - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
+    - pip3 install --upgrade pip
+    - pip3 install docker-compose
     - docker-compose --version
   cache:
     key: $CI_JOB_NAME
@@ -136,6 +141,7 @@ buildtest:search-no-index-cache:
       - "target"
       - "*/target"
       - "*/project/target"
+      - "$CI_PROJECT_DIR/pip-cache"
   services:
     - postgres:9.6
     - docker:dind
@@ -144,6 +150,7 @@ buildtest:search-no-index-cache:
     POSTGRES_DB: postgres
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: ""
+    PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
     # 2.5gb heap
     # unload classes we don't need
     # aim for < 1000ms gc pauses (largely ignored)
