--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -1,16 +1,22 @@
 {
+  "private": true,
   "name": "@magda/web-client",
   "description": "The MAGDA in-browser web front end.",
   "version": "0.0.55-0",
   "license": "Apache-2.0",
+  "workspaces": {
+    "nohoist": [
+      "react-scripts"
+    ]
+  },
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook -s ./public",
     "deploy-storybook": "build-storybook -c .storybook -o .out",
     "dev": "pancake && yarn run start",
     "prepare": "pancake",
-    "start": "craco start --react-scripts ../node_modules/react-scripts",
-    "build": "pancake && craco build --react-scripts ../node_modules/react-scripts",
-    "test": "craco test --react-scripts ../node_modules/react-scripts",
+    "start": "craco start",
+    "build": "pancake && craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
