--- a/magda-builder-scala/package.json
+++ b/magda-builder-scala/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/builder-scala",
-  "version": "0.0.54-RC2",
+  "version": "0.0.55-0",
   "description": "Builder image for scala magda projects",
   "scripts": {
     "docker-build-prod": "create-docker-context-for-node-component --build --push",
@@ -16,8 +16,8 @@
     }
   },
   "devDependencies": {
-    "@magda/builder-docker": "^0.0.54-RC2",
-    "@magda/scripts": "^0.0.54-RC2"
+    "@magda/builder-docker": "^0.0.55-0",
+    "@magda/scripts": "^0.0.55-0"
   },
   "magda": {
     "categories": {
