--- a/magda-postgres/package.json
+++ b/magda-postgres/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/postgres",
-  "version": "0.0.54-RC2",
+  "version": "0.0.55-0",
   "description": "A base Docker image for PostgreSQL with Flyway for schema migrations.",
   "scripts": {
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
@@ -17,7 +17,7 @@
     }
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.54-RC2"
+    "@magda/scripts": "^0.0.55-0"
   },
   "magda": {
     "categories": {
