--- a/magda-preview-map/package.json
+++ b/magda-preview-map/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/preview-map",
-  "version": "0.0.54-RC2",
+  "version": "0.0.55-0",
   "description": "Geospatial preview based on TerriaJS.",
   "license": "Apache-2.0",
   "engines": {
@@ -29,7 +29,7 @@
     }
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.54-RC2",
+    "@magda/scripts": "^0.0.55-0",
     "babel-core": "^6.7.4",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.0.0",
