--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@magda/web-client",
   "description": "The MAGDA in-browser web front end.",
-  "version": "0.0.55-0",
+  "version": "0.0.55-RC1",
   "license": "Apache-2.0",
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook -s ./public",
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^3.6.0",
-    "@magda/scripts": "^0.0.55-0",
+    "@magda/scripts": "^0.0.55-RC1",
     "@storybook/addon-actions": "^3.3.3",
     "@storybook/addon-links": "^3.3.3",
     "@storybook/addons": "^3.3.3",
