--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -25,9 +25,7 @@ ingress:
     - "*.dev.magda.io"
 
 gateway:
-  ckanRedirectionDomain: "ckan.data.gov.au"
-  ckanRedirectionPath: ""
-  enableCkanRedirection: true
+  enableCkanRedirection: false
   enableAuthEndpoint: true
   enableHttpsRedirection: true
   auth:
