--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -22,6 +22,7 @@ tags:
   apidocs-server: false
   admin-api: false
   authorization-api: false
+  opa: false
   authorization-db: false
   combined-db: false
   content-api: false
