opa deployment with policy files

--- a/deploy/helm/magda/charts/opa/values.yaml
+++ b/deploy/helm/magda/charts/opa/values.yaml
@@ -1,7 +1,8 @@
 image: {}
+replicas: 1
 resources:
   requests:
-    cpu: 50m
-    memory: 200Mi
+    cpu: 20m
+    memory: 50Mi
   limits:
     cpu: 100m
