--- a/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
@@ -24,7 +24,8 @@ spec:
             "/usr/src/app/component/dist/index.js",
             "--listenPort", "80",
             "--dbHost", "authorization-db",
-            "--dbPort", "5432"
+            "--dbPort", "5432",
+            "--opaUrl", "http://opa/v1"
         ]
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
