--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@magda/typescript-common": "^0.0.56-0",
-    "body-parser": "^1.13.2",
+    "body-parser": "^1.18.3",
     "express": "^4.13.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.4",
     "pg": "^6.4.0",
+    "request": "^2.88.0",
     "tsmonad": "^0.7.2",
     "yargs": "^12.0.5"
   },
@@ -30,14 +31,15 @@
     "@types/mocha": "^2.2.47",
     "@types/nock": "^9.1.2",
     "@types/pg": "^6.1.41",
-    "@types/sinon": "^4.1.3",
+    "@types/request": "^2.48.1",
+    "@types/sinon": "^7.0.11",
     "@types/supertest": "^2.0.4",
     "@types/yargs": "^12.0.8",
     "chai": "^4.1.2",
     "mocha": "^3.5.3",
     "nock": "^9.1.6",
     "nyc": "^13.1.0",
-    "sinon": "^4.2.1",
+    "sinon": "^7.3.1",
     "supertest": "^3.0.0",
     "typescript": "^3.2.0"
   },
