--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -18,6 +18,7 @@
     "express": "^4.13.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.4",
+    "object-path": "^0.11.4",
     "pg": "^6.4.0",
     "request": "^2.88.0",
     "tsmonad": "^0.7.2",
@@ -30,6 +31,7 @@
     "@types/lodash": "^4.14.96",
     "@types/mocha": "^2.2.47",
     "@types/nock": "^9.1.2",
+    "@types/object-path": "^0.11.0",
     "@types/pg": "^6.1.41",
     "@types/request": "^2.48.1",
     "@types/sinon": "^7.0.11",
