- fixed policy files mount - included cache to speed up test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -302,11 +302,14 @@ buildtest:opa-policies:
   stage: buildtest
   image: registry.gitlab.com/magda-data/magda/data61/magda-builder-docker:$CI_COMMIT_REF_SLUG
   retry: 1
+  dependencies:
+    - builders-and-yarn
+  cache:
+    paths: []
   services:
     - docker:dind
   script:
-    - cd deploy/helm/magda/charts/opa
-    - docker run openpolicyagent/opa:0.10.6 test -v ./policies
+    - docker run -v $PWD/deploy/helm/magda/charts/opa/policies:/policies openpolicyagent/opa:0.10.7 test -v ./policies
 
 dockerize:scala:
   stage: dockerize
