--- a/magda-search-api-node/package.json
+++ b/magda-search-api-node/package.json
@@ -16,6 +16,7 @@
     "@elastic/elasticsearch": "^6.7.0-rc.1",
     "@magda/typescript-common": "^0.0.56-0",
     "body-parser": "^1.13.2",
+    "chrono-node": "^1.3.11",
     "djv": "^2.1.1",
     "express": "^4.13.1",
     "express-validation": "^1.0.2",
