--- a/deploy/helm/magda/charts/search-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/search-api/templates/deployment.yaml
@@ -23,6 +23,7 @@ spec:
           - "/app/bin/magda-search-api"
           - "-Dhttp.port=80"
           - "-Dakka.loglevel={{ .Values.global.logLevel }}"
+          - "-Dopa.baseUrl=http://authorization-api/v0/opa/",
           - "-DelasticSearch.serverUrl=elasticsearch://elasticsearch:9200"
 {{- if .Values.datasetsIndexVersion }}
           - "-DelasticSearch.indices.datasets.version={{ .Values.datasetsIndexVersion }}"
