fixed opa status check endpoint forward url

--- a/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
             "--listenPort", "80",
             "--dbHost", "authorization-db",
             "--dbPort", "5432",
-            "--opaUrl", "http://opa/v1"
+            "--opaUrl", "http://opa/"
         ]
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
