turned off status check for OPA route --- it's been checked seperately

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -40,6 +40,7 @@ defaultRoutes:
   opa:
     to: http://authorization-api/v0/opa
     auth: true
+    statusCheck: false
   admin:
     to: http://admin-api/v0
     auth: true
