--- a/deploy/helm/magda/charts/content-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/deployment.yaml
@@ -24,6 +24,7 @@ spec:
             "node",
             "/usr/src/app/component/dist/index.js",
             "--authApiUrl", "http://authorization-api/v0",
+            "--opaUrl", "http://authorization-api/v0/opa/",
             "--listenPort", "80",
             "--dbHost", "content-db",
             "--dbPort", "5432"
