--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "retag-and-push": "lerna run retag-and-push --stream",
     "eslint": "./node_modules/.bin/eslint magda-web-client/src/",
     "create-secrets": "create-secrets",
-    "start-opa-dev": "opa run deploy/helm/magda/charts/opa/policies --server",
+    "start-opa": "opa run deploy/helm/magda/charts/opa/policies",
     "test-opa": "opa test deploy/helm/magda/charts/opa/policies -v"
   },
   "pancake": {
