--- a/magda-typescript-common/tsconfig.json
+++ b/magda-typescript-common/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig-build.json",
     "compilerOptions": {
         "baseUrl": ".",
+        "resolveJsonModule": true,
         "paths": {
             "@magda/registry-aspects/dist/*": [
                 "../node_modules/@magda/registry-aspects/src/*"
