Neatened up upload screen.

--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -46,7 +46,9 @@
     "mammoth": "^1.4.7",
     "nlcst-to-string": "^2.0.2",
     "pdfjs-dist": "2.0.550",
+    "react": "^16.8.6",
     "react-app-polyfill": "^0.2.1",
+    "react-dates": "^20.1.0",
     "react-file-drop": "^0.2.7",
     "react-i18next": "^8.1.0",
     "react-leaflet": "^2.2.1",
@@ -66,7 +68,8 @@
     "@storybook/addons": "^3.3.3",
     "@storybook/react": "^3.2.17",
     "@types/papaparse": "^4.5.7",
-    "@types/react": "16.4.9",
+    "@types/react": "^16.8.17",
+    "@types/react-dates": "^17.1.5",
     "babel-core": "^6.26.0",
     "browser-detect": "^0.2.22",
     "d3-collection": "^1.0.4",
@@ -94,7 +97,6 @@
     "pretty-date": "^0.2.0",
     "prop-types": "^15.6.1",
     "query-string": "^4.3.4",
-    "react": "^16.3.2",
     "react-autosuggest": "^9.3.2",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.3.2",
