make db available in gitlab for typescript-apis test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -256,6 +256,8 @@ buildtest:typescript-apis:
     - registry-typescript-api
   cache:
     paths: []
+  services:
+    - postgres:9.6
   script:
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run build --include-filtered-dependencies
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run test --include-filtered-dependencies
