--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -258,6 +258,11 @@ buildtest:typescript-apis:
     paths: []
   services:
     - postgres:9.6
+  variables:
+    POSTGRES_HOST: postgres
+    POSTGRES_DB: postgres
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: ""
   script:
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run build --include-filtered-dependencies
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run test --include-filtered-dependencies
