--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ matrix:
         - docker-compose down
     - language: node_js
       node_js: "8"
+      services:
+        - postgresql
       cache:
         directories:
           - $HOME/.ivy2/cache
@@ -58,6 +60,10 @@ matrix:
       env:
         global:
           - CI=true
+          - POSTGRES_HOST=localhost
+          - POSTGRES_DB=postgres
+          - POSTGRES_USER=postgres
+          - POSTGRES_PASSWORD=""
     - language: node_js
       node_js: "8"
       cache:
