--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -12,6 +12,9 @@ global:
   useCombinedDb: true
   enablePriorityClass: false
 
+combined-db:
+  debug: true
+
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
   ckanRedirectionPath: ""
