--- a/deploy/helm/magda/charts/combined-db/values.yaml
+++ b/deploy/helm/magda/charts/combined-db/values.yaml
@@ -1,6 +1,10 @@
 image: {}
 data:
   storage: 200Gi
+# whether turn on the debug module for plsql debug through pgAdmin
+# After that, you need to run `CREATE EXTENSION pldbgapi;` 
+# in the database that you want to debug to turn it on database level
+debug: false
 resources:
   requests:
     cpu: 200m
