--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.4",
     "morgan": "^1.6.1",
     "passport": "^0.2.2",
+    "passport-arcgis": "^0.1.8",
     "passport-custom": "^1.0.5",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth20": "^1.0.0",
