--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@magda/scripts": "^0.0.56-0",
     "@types/chai": "^4.1.2",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.96",
     "@types/mocha": "^2.2.47",
@@ -38,6 +39,7 @@
     "@types/supertest": "^2.0.4",
     "@types/yargs": "^12.0.8",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^3.5.3",
     "nock": "^9.1.6",
     "nyc": "^13.1.0",
