--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -21,6 +21,7 @@
     "object-path": "^0.11.4",
     "pg": "^6.4.0",
     "request": "^2.88.0",
+    "text-treeview": "^1.0.1",
     "tsmonad": "^0.7.2",
     "yargs": "^12.0.5"
   },
