--- a/magda-search-api-node/package.json
+++ b/magda-search-api-node/package.json
@@ -42,6 +42,7 @@
     "@types/supertest": "^2.0.4",
     "@types/urijs": "^1.15.38",
     "@types/yargs": "^12.0.8",
+    "casual": "^1.6.0",
     "chai": "^4.1.2",
     "mocha": "^3.5.3",
     "nock": "^9.1.6",
