Started testing geo queries.

--- a/magda-search-api-node/package.json
+++ b/magda-search-api-node/package.json
@@ -20,6 +20,7 @@
     "djv": "^2.1.1",
     "express": "^4.13.1",
     "express-validation": "^1.0.2",
+    "geojson": "^0.5.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.4",
@@ -32,6 +33,7 @@
     "@magda/scripts": "^0.0.56-0",
     "@types/chai": "^4.1.2",
     "@types/express": "^4.0.35",
+    "@types/geojson": "^7946.0.7",
     "@types/joi": "^14.3.2",
     "@types/lodash": "^4.14.96",
     "@types/mime-types": "^2.1.0",
