--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -371,6 +371,23 @@
                 "tsconfig-paths/register",
                 "src/test/**/*.spec.ts"
             ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "protocol": "inspector",
+            "name": "Search API Test Cases",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "cwd": "${workspaceRoot}/magda-search-api-node",
+            "args": [
+                "--compilers",
+                "ts:ts-node/register",
+                "--require",
+                "tsconfig-paths/register",
+                "src/test/**/*.spec.ts",
+                "--fgrep",
+                "region"
+            ]
         }
     ]
 }
