--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,7 +15,8 @@
     "set-scss-vars": "set-scss-vars.js",
     "pkg-create-secrets-script": "pkg create-secrets/index.js --out-path create-secrets/build",
     "create-region-synonym-file": "create-region-synonym-file.js",
-    "org-tree": "org-tree/index.js"
+    "org-tree": "org-tree/index.js",
+    "acs-cmd": "acs-cmd/index.js"
   },
   "devDependencies": {
     "@types/pg": "^7.4.14",
@@ -51,6 +52,7 @@
     "stream-json": "^1.1.3",
     "strip-ansi": "^4.0.0",
     "strip-json-comments": "^2.0.1",
+    "table": "^5.3.3",
     "tmp": "0.0.31",
     "toposort": "^1.0.6",
     "ts-node": "^3.0.4",
