--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -21,6 +21,7 @@
     "object-path": "^0.11.4",
     "pg": "^6.4.0",
     "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "text-treeview": "^1.0.1",
     "tsmonad": "^0.7.2",
     "yargs": "^12.0.5"
@@ -36,6 +37,7 @@
     "@types/object-path": "^0.11.0",
     "@types/pg": "^6.1.41",
     "@types/request": "^2.48.1",
+    "@types/request-promise-native": "^1.0.16",
     "@types/sinon": "^7.0.11",
     "@types/supertest": "^2.0.4",
     "@types/yargs": "^12.0.8",
