- add VocabularyAutoCompleteInput - allows `vocabularyApiEndpoints` to be configurable

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -9,5 +9,6 @@ data:
     {{- if .Values.contentApiBaseUrlInternal -}} "contentApiBaseUrlInternal": {{ .Values.contentApiBaseUrlInternal | quote }}, {{- end -}}
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
     "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
-    "featureFlags": {{ toJson .Values.featureFlags | quote }}
+    "featureFlags": {{ toJson .Values.featureFlags | quote }},
+    "vocabularyApiEndpoints": {{ toJson .Values.vocabularyApiEndpoints | default "[]" }},
   }'
