--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -61,7 +61,7 @@ spec:
             "--helmetJson", "/etc/config/helmet.json",
             "--cspJson", "/etc/config/csp.json",
             "--corsJson", "/etc/config/cors.json",
-            "--web", {{ .Values.defaultWeb | "http://web" }},
+            "--web", {{ .Values.defaultWeb | default "http://web" }},
             "--authorizationApi", "http://authorization-api/v0",
             "--previewMap", "http://preview-map:6110",
         ]
