Added deployments for tenant-api and tenant-db.

--- a/deploy/helm/magda/requirements.yaml
+++ b/deploy/helm/magda/requirements.yaml
@@ -75,6 +75,14 @@ dependencies:
     tags:
       - all
       - opa
+  - name: tenant-api
+    tags:
+      - all
+      - tenant-api
+  - name: tenant-db
+    tags:
+      - all
+      - tenant-db
 
 # Minions
   - name: minion-broken-link
