--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -180,6 +180,45 @@ buildtest:search-no-index-cache:
       - "*/target"
     expire_in: 30 days
 
+buildtest:search-node:
+  stage: buildtest
+  image: registry.gitlab.com/magda-data/magda/data61/magda-builder-docker:$CI_COMMIT_REF_SLUG
+  retry: 2
+  dependencies:
+    - builders-and-yarn
+  before_script:
+    - |
+      if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
+        export DOCKER_HOST='tcp://localhost:2375'
+      fi
+    - docker info
+    - apk update
+    - apk upgrade
+    - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
+    - pip3 install --upgrade pip
+    - pip3 install docker-compose
+    - docker-compose --version
+  cache:
+    key: $CI_JOB_NAME
+    paths:
+      - "$CI_PROJECT_DIR/pip-cache"
+  services:
+    - docker:dind
+  variables:
+    PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
+  script:
+    - cd magda-elastic-search
+    - docker-compose up -d
+    - cd ..
+    - yarn run in-submodules -- -f categories.search=true -f language=typescript -- run build --include-filtered-dependencies
+    - yarn run in-submodules -- -f categories.search=true -f language=typescript -- run test --include-filtered-dependencies
+    - cd magda-elastic-search
+    - docker-compose down
+  artifacts:
+    paths:
+      - "*/dist"
+    expire_in: 30 days
+
 buildtest:ui:
   stage: buildtest
   image: registry.gitlab.com/magda-data/magda/data61/magda-builder-nodejs:$CI_COMMIT_REF_SLUG
