--- a/magda-search-api-node/package.json
+++ b/magda-search-api-node/package.json
@@ -15,18 +15,14 @@
   "dependencies": {
     "@elastic/elasticsearch": "^6.7.0-rc.1",
     "@magda/typescript-common": "^0.0.56-0",
-    "body-parser": "^1.13.2",
     "chrono-node": "^1.3.11",
-    "djv": "^2.1.1",
     "express": "^4.13.1",
     "express-validation": "^1.0.2",
     "geojson": "^0.5.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.4",
-    "pg": "^6.4.0",
     "tsmonad": "^0.7.2",
-    "wildcard": "^1.1.2",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
@@ -36,13 +32,10 @@
     "@types/geojson": "^7946.0.7",
     "@types/joi": "^14.3.2",
     "@types/lodash": "^4.14.96",
-    "@types/mime-types": "^2.1.0",
     "@types/mocha": "^2.2.47",
     "@types/nock": "^9.1.2",
-    "@types/pg": "^6.1.41",
     "@types/sinon": "^4.1.3",
     "@types/supertest": "^2.0.4",
-    "@types/urijs": "^1.15.38",
     "@types/yargs": "^12.0.8",
     "casual": "^1.6.0",
     "chai": "^4.1.2",
@@ -55,7 +48,7 @@
   },
   "config": {
     "docker": {
-      "name": "data61/magda-content-api",
+      "name": "data61/magda-search-api-node",
       "include": "node_modules dist Dockerfile"
     },
     "jwtSecret": "squirrel",
@@ -64,7 +57,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "api": true
+      "api": true,
+      "search": true
     }
   },
   "nyc": {
