Removed tenants table and related services from registry.

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -52,8 +52,9 @@ defaultRoutes:
   apidocs:
     to: http://apidocs-server/
     redirectTrailingSlash: true
-  
-helmet: {}
+  tenant:
+    to: http://tenant-api/v0
+    auth: true
 
 csp:
   browserSniff: false
