--- a/magda-admin-api/package.json
+++ b/magda-admin-api/package.json
@@ -56,7 +56,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "api": true
+      "api": true,
+      "stateless": true
     }
   },
   "nyc": {
