--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -77,7 +77,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "api": true
+      "api": true,
+      "stateless": true
     }
   }
 }
