--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -93,7 +93,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "api": true
+      "api": true,
+      "uses-pg": true
     }
   }
 }
