--- a/magda-search-api-node/package.json
+++ b/magda-search-api-node/package.json
@@ -58,7 +58,7 @@
     "language": "typescript",
     "categories": {
       "api": true,
-      "search": true
+      "uses-es": true
     }
   },
   "nyc": {
