1. Reverted intTest settings to originals to see if it still takes too long to complete. 2. Added multi-tenant mode deployment job in CI.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ pancake
 package-lock.json
 */package-lock.json
 .nyc_*
+
+# docker specific
+docker-context-*/
+
+#tenant-api specific
+magda-tenant-api/lib/
+
