--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -31,11 +31,13 @@
     "@types/chai": "^4.1.2",
     "@types/chai-as-promised": "^7.1.0",
     "@types/express": "^4.0.35",
+    "@types/fs-extra": "^7.0.0",
     "@types/lodash": "^4.14.96",
     "@types/mocha": "^2.2.47",
     "@types/nock": "^9.1.2",
     "@types/object-path": "^0.11.0",
     "@types/pg": "^6.1.41",
+    "@types/recursive-readdir": "^2.2.0",
     "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.16",
     "@types/sinon": "^7.0.11",
@@ -43,9 +45,11 @@
     "@types/yargs": "^12.0.8",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "fs-extra": "^8.0.1",
     "mocha": "^3.5.3",
     "nock": "^9.1.6",
     "nyc": "^13.1.0",
+    "recursive-readdir": "^2.2.2",
     "sinon": "^7.3.1",
     "supertest": "^3.0.0",
     "typescript": "^3.2.0"
