--- a/magda-builder-nodejs/Dockerfile
+++ b/magda-builder-nodejs/Dockerfile
@@ -2,6 +2,7 @@ FROM mhart/alpine-node:8
 
 RUN npm install -g lerna
 
-RUN apk --update add git openssh bash && \
+RUN apk --update add git openssh bash \
+    python make g++ && \
     rm -rf /var/lib/apt/lists/* && \
     rm /var/cache/apk/*
