--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -254,18 +254,39 @@ buildtest:typescript-apis:
   dependencies:
     - builders-and-yarn
     - registry-typescript-api
+  before_script:
+    - |
+      if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
+        export DOCKER_HOST='tcp://localhost:2375'
+      fi
+    - docker info
+    - apk update
+    - apk upgrade
+    - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
+    - pip3 install --upgrade pip
+    - pip3 install docker-compose
+    - docker-compose --version
   cache:
-    paths: []
+    paths:
+      - "$CI_PROJECT_DIR/pip-cache"
   services:
     - postgres:9.6
+    - docker:dind
   variables:
+    PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
     POSTGRES_HOST: postgres
     POSTGRES_DB: postgres
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: ""
+    OPA_URL: "http://docker:8181/"
   script:
+    - cd deploy/helm/magda/charts/opa
+    - docker-compose up -d
+    - cd ../../../../..
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run build --include-filtered-dependencies
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run test --include-filtered-dependencies
+    - cd deploy/helm/magda/charts/opa
+    - docker-compose down
   artifacts:
     paths:
       - "*/dist"
