Translate some fields to what other passport modules produce

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -45,6 +45,15 @@ spec:
 {{- if .Values.auth.aafClientUri}}
             "--aafClientUri", {{ .Values.auth.aafClientUri| quote }},
 {{- end }}
+{{- if .Values.auth.googleClientId }}
+            "--googleClientId", {{ .Values.auth.googleClientId | quote }},
+{{- end }}
+{{- if .Values.auth.vanguardWsFedIdpUrl }}
+            "--vanguardWsFedIdpUrl", {{ .Values.auth.vanguardWsFedIdpUrl | quote }},
+{{- end }}
+{{- if .Values.auth.vanguardWsFedRealm }}
+            "--vanguardWsFedRealm", {{ .Values.auth.vanguardWsFedRealm | quote }},
+{{- end }}
 {{- if .Values.enableAuthEndpoint }}
             "--enableAuthEndpoint", {{ .Values.enableAuthEndpoint | quote }},
 {{- end }}
