--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -24,6 +24,8 @@ gateway:
     arcgisClientId: "d0MgVUbbg5Z6vmWo"
     googleClientId: "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com"
     ckanAuthenticationUrl: https://data.gov.au/data
+    vanguardWsFedIdpUrl: https://thirdparty.authentication.business.gov.au/fas/v2/wsfed12/authenticate
+    vanguardWsFedRealm: https://environment.magda.io/integration-test-2
   autoscaler:
     enabled: false
   helmet:
