Delete indexes after each test.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,8 +103,13 @@ buildtest:search-group-1:
   tags:
     - heavy
   script:
+    - cd magda-elastic-search
+    - docker-compose up -d
+    - cd ..
     - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
     - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.DataSet*Spec"
+    - cd magda-elastic-search
+    - docker-compose down
   artifacts:
     paths:
       - "target"
@@ -157,8 +162,13 @@ buildtest:search-group-2:
     tags:
         - heavy
     script:
+        - cd magda-elastic-search
+        - docker-compose up -d
+        - cd ..
         - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
         - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.Facet*Spec"
+        - cd magda-elastic-search
+        - docker-compose down
     artifacts:
         paths:
             - "target"
@@ -211,8 +221,13 @@ buildtest:search-group-3:
     tags:
         - heavy
     script:
+        - cd magda-elastic-search
+        - docker-compose up -d
+        - cd ..
         - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
         - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.Language*Spec au.csiro.data61.magda.api.Tenant*Spec"
+        - cd magda-elastic-search
+        - docker-compose down
     artifacts:
         paths:
             - "target"
@@ -270,8 +285,13 @@ buildtest:other-int-tests:
   tags:
     - heavy
   script:
+    - cd magda-elastic-search
+    - docker-compose up -d
+    - cd ..
     - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
     - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.crawler.*Spec au.csiro.data61.magda.indexer.*Spec au.csiro.data61.magda.opa.*Spec au.csiro.data61.magda.spatial.*Spec"
+    - cd magda-elastic-search
+    - docker-compose down
   artifacts:
     paths:
       - "target"
